--- a/css/master.css
+++ b/css/master.css
@@ -2,10 +2,11 @@
 *{
   margin: 0;
   padding: 0;
+  /* font-size: 26px; */
 }
 
 h1, h2, h3, h4{
-  margin-bottom: 3%;
+  margin-bottom: 30px;
   font-weight: bold;
 }
 
@@ -52,6 +53,7 @@ header .row{
   background-image: url("bg-home-1-d54581d7.jpg");
   padding: 10%;
   color: white;
+
 }
 
 
@@ -62,18 +64,33 @@ header .row{
   color: black;
 }
 
+
+
 .form{
   background-color: white;
   color: black;
-  padding: 10%;
+  padding: 15px 30px;
   border-radius: 5px;
+}
+
+div.form *{
+  margin-bottom: 5px;
+}
+
+.form .note {
+  font-size: 1.1rem;
 }
 
 #section_0 form a{
   display: block;
   text-align: center;
-  padding: 2% 0;
+  padding: 10px 0;
+  margin-bottom: 10px;;
   border-radius: 10px;
+}
+
+#section_0 .form .title-box{
+  margin-bottom: 40px;
 }
 
 .google-btn{
@@ -84,6 +101,12 @@ header .row{
   width: 100%;
   background: #0CB863;
 }
+
+.home h1{
+  font-size: 4em;
+}
+
+/* Testo Responsive section 0 */
 
 /* Section 1 */
 #section_1{
@@ -213,4 +236,8 @@ footer a{
  /* Classi ausiliarie */
  .mr-r{
    margin-right: 5%;
+ }
+
+ .title-box{
+   margin-bottom: 20px;
  }
