--- a/css/master.css
+++ b/css/master.css
@@ -2,7 +2,6 @@
 *{
   margin: 0;
   padding: 0;
-  margin-bottom: 10px;
   font-size: 18px;
   /* font-size: 26px; */
 }
@@ -23,7 +22,7 @@ body{
 
 .container{
   min-width: 80%;
-  max-width: 95%;
+  max-width: 90%;
   padding: 0;
   margin: 0 auto;
 }
@@ -33,35 +32,73 @@ body{
 }
 
 
+
+#section_0,
+#section_1,
+#section_2,
+#section_3,
+#section_4,
+#section_5,
+#section_6,
+#section_7{
+  padding: 2% 0;
+}
+
+[id*="section_"] *{
+  margin-bottom: 25px;
+}
+
+
 li{
   list-style: none;
+}
+
+.note p,
+.note a {
+  font-size: 12px;
+  margin-top: 10px;
 }
 
 /* Svrascrittura regole Bootstrap */
 
 header .nav-sup .btn-nav{
-  padding: 0 5px;
+  /* padding: 0 5px; */
 }
 
 header .nav-sup {
   margin-right: -40px;
 }
 
-
-
 /* Regole Specifiche per Header */
 header{
   font-size: 16px;
+}
+
+header .container-nav{
+  max-width: 95%;
+  margin: 0 auto;
+
+}
+
+header #hamburgher{
+  background: none;
+  border: none;
+  padding: 10px;
 }
 /* Section 0 */
 #section_0{
   /* font-size: 62px; */
   background-image: url("bg-home-1-d54581d7.jpg");
   padding: 10%;
-  color: white;
-  font-weight: lighter;
   font-size: 1.2em;
 
+}
+
+
+
+#section_0 .col-header h1,
+#section_0 .col-header p{
+  color: white;
 }
 
 
@@ -69,7 +106,10 @@ header{
 #section_0 form{
   margin: 0 auto;
   background-color: white;
-  color: black;
+}
+
+#section_0 form .note p{
+  color: #5B6987;
 }
 
 
@@ -85,9 +125,7 @@ div.form *{
   margin-bottom: 5px;
 }
 
-.form .note {
-  font-size: 1.1rem;
-}
+
 
 #section_0 form a{
   display: block;
@@ -146,6 +184,10 @@ div.form *{
 
 
 /* Section_3 */
+#section_6{
+  margin: -25px 0;
+}
+
 #section_3 img,
 #section_6 img{
  max-width: 80%;
@@ -159,13 +201,6 @@ div.form *{
   width: 100%;
 
 }
-#section_5 [class*="col-md-"]{
-
-}
-
-
-
-
 
 #section_5{
 
@@ -218,11 +253,18 @@ footer{
   background-color: #010E28;
   color: gray;
   padding-top: 5%;
+  font-weight: lighter;
 }
+
+
 
 footer .social-footer li{
   float: left;
   padding-right: 2%;
+}
+
+footer .social-footer{
+  margin-top: 20px;
 }
 
 footer a{
@@ -237,7 +279,7 @@ footer a{
  footer .collegamenti ul span{
    color: white;
    font-weight: bold;
-   margin-bottom: 20px;
+   margin-bottom: 2%;
  }
 
  /* Classi ausiliarie */
@@ -250,6 +292,7 @@ footer a{
  }
 
 
+
 /* MEDIA QUERY */
 
 /* Testo Responsive */
@@ -257,8 +300,23 @@ footer a{
   body {
     font-size: 18px;
   }
+
+  header {
+    background: none;
+  }
+
   #section_0 h1{
    font-size: 2em;
   }
 
+  footer > div{
+    margin-bottom: 50px;
+  }
+
+  footer .social-footer{
+    margin-bottom: 20px;
+  }
+
 }
+
+/* Padding interno sezioni Responsive */
